poinavi: move settings button left to avoid overlap

--- a/poinavi/style.css
+++ b/poinavi/style.css
@@ -1623,7 +1623,7 @@ body.dark-mode .settings-modal__select {
 .map-settings-button {
   position: absolute;
   top: 16px;
-  right: 16px;
+  right: 60px;
   z-index: 10;
   width: 44px;
   height: 44px;
@@ -2794,7 +2794,7 @@ body.dark-mode .translate-result-item__divider svg {
 
   .map-settings-button {
     top: 10px;
-    right: 10px;
+    right: 50px;
     width: 40px;
     height: 40px;
     border-radius: 10px;
